<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D2FF4866"
            android:fontFamily="@font/iran_sans"
            android:gravity="center"
            android:text="@string/logout_title"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:textColor="@color/grey"
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/iran_sans"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/logout_subtitle"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <Button
            android:id="@+id/logoutNoBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:background="#F2F2F2"
            android:fontFamily="@font/iran_sans"
            android:gravity="center"
            android:text="@string/no_text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/logoutYesButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:background="@color/appThemeColor"
            android:fontFamily="@font/iran_sans"
            android:gravity="center"
            android:text="@string/yes_text"
            android:textSize="14sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>