<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SleepManagerActivity"
    android:background="@color/appThemeColor"
    android:fitsSystemWindows="true"
    android:layoutDirection="ltr">

    <TextView
        android:textColor="#90000000"
        android:id="@+id/remainingDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iran_sans"
        android:gravity="center_horizontal"
        android:lines="2"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintVertical_bias="0.75"
        android:text="@string/sleep_input_request"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="390dp"
        android:layout_height="260dp"
        android:src="@drawable/clock_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <com.bikcrum.circularrangeslider.CircularRangeSlider
        android:id="@+id/clock"
        android:layout_width="238dp"
        android:layout_height="204dp"
        app:axisColor="#7E7E7E"
        app:borderColor="#F6F6F6"
        app:circleColor="#F6F6F6"
        app:labelColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.369"
        app:layout_constraintHorizontal_bias="0.77"
        app:progressColor="#839BF8"
        app:startIndexStepColor="#839BF8" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="#F2F2F2"
            android:fontFamily="@font/iran_sans"
            android:onClick="submit"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/save_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="#686868" />

        <Button
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="#F2F2F2"
            android:fontFamily="@font/iran_sans"
            android:onClick="recordAuto"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/record_automatically_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button2" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:textColor="#90000000"
            android:id="@+id/wakeUpTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="13dp"
            android:fontFamily="@font/iran_sans"
            android:textSize="14sp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/wakeup_time" />

        <TextView
            android:textColor="#90000000"
            android:id="@+id/sleepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/iran_sans"
            android:textSize="14sp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sleep_time" />

    </LinearLayout>


    <TextView
        android:textColor="#0074D9"
        android:id="@+id/totalSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/iran_sans"
        android:text="@string/sleep_duration"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutContainer" />



</androidx.constraintlayout.widget.ConstraintLayout>