<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">


    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#ffffff"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:src="@drawable/no_internet_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/iran_sans"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/internet_subtitle"
            android:textAlignment="center"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:fontFamily="@font/iran_sans"
                android:id="@+id/internetButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textSize="14sp"
                android:gravity="center"
                android:background="#F2F2F2"
                android:text="@string/internet_data_button" />

            <Button
                android:fontFamily="@font/iran_sans"
                android:id="@+id/wifiButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textSize="14sp"
                android:gravity="center"
                android:background="@color/appThemeColor"
                android:text="@string/internet_wifi_button" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>