<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SupportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:fillViewport="true"
        tools:context=".MyDrive">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/top_title_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:alpha="1"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/iran_sans"
                    android:src="@drawable/blue"
                    android:textColor="#191919"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/iran_sans"
                    android:text="@string/support_title"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="14dp"
                    android:background="@drawable/ic_support_menu"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/item_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="2dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="5dp">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/factor_background"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/sadgan_medium"
                            android:paddingBottom="4dp"
                            android:text="@string/support_website"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/websiteText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/iran_sans"
                            android:gravity="center_horizontal"
                            android:text="@string/website_address"
                            android:textAlignment="textStart"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toStartOf="@+id/textView9"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="RtlCompat" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/iran_sans"
                            android:layout_marginTop="10dp"
                            android:text="@string/support_website_subtitle"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView9" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/factor_background"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="6dp"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                        tools:layout_editor_absoluteX="15dp">



                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="14dp"
                            android:fontFamily="@font/sadgan_medium"
                            android:paddingBottom="4dp"
                            android:text="@string/support_contact_title"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/iran_sans"
                            android:layout_marginTop="10dp"
                            android:text="@string/support_contact_subtitle"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />


                        <LinearLayout
                            android:id="@+id/linearLayout10"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginTop="25dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/subtitle">

                            <Button
                                android:id="@+id/emailButton"
                                android:layout_width="40dp"
                                android:layout_height="32dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/contact_gmail" />

                            <Button
                                android:id="@+id/telegramButton"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/contact_telegram" />

                            <Button
                                android:id="@+id/whatsappButton"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/contact_whatsapp" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/backButton"
                    android:paddingRight="7dp"
                    android:paddingLeft="7dp"
                    android:fontFamily="@font/iran_sans"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_marginRight="11dp"
                    android:layout_marginLeft="11dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="2dp"
                    android:layout_height="45dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:background="@drawable/button_background"
                    android:text="@string/return_button"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:alpha="0.75"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>